// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses complex tabs 1`] = `
Object {
  "instruments": Array [
    "B",
    "C",
    "F",
    "H",
    "R",
    "S",
    "T",
    "t",
  ],
  "length": 2096,
  "tracks": Array [
    Object {
      "instrument": "B",
      "length": 2096,
      "notes": Array [
        16,
        22,
        26,
        30,
        32,
        38,
        42,
        46,
        48,
        54,
        58,
        62,
        64,
        70,
        74,
        78,
        80,
        86,
        90,
        94,
        96,
        102,
        106,
        110,
        112,
        118,
        122,
        126,
        128,
        134,
        144,
        150,
        152,
        158,
        160,
        166,
        168,
        174,
        176,
        182,
        184,
        190,
        192,
        198,
        200,
        206,
        208,
        214,
        216,
        222,
        224,
        230,
        232,
        238,
        240,
        246,
        248,
        254,
        256,
        262,
        264,
        270,
        272,
        278,
        280,
        286,
        288,
        294,
        296,
        302,
        304,
        310,
        312,
        318,
        320,
        326,
        328,
        334,
        336,
        342,
        344,
        350,
        352,
        358,
        360,
        366,
        368,
        370,
        376,
        378,
        384,
        386,
        392,
        400,
        406,
        410,
        414,
        416,
        422,
        426,
        430,
        432,
        438,
        442,
        446,
        448,
        454,
        458,
        464,
        470,
        474,
        478,
        480,
        486,
        490,
        494,
        496,
        502,
        506,
        510,
        512,
        514,
        518,
        520,
        526,
        528,
        534,
        538,
        542,
        544,
        550,
        554,
        558,
        560,
        566,
        570,
        574,
        576,
        578,
        582,
        586,
        590,
        592,
        600,
        608,
        616,
        624,
        630,
        634,
        638,
        640,
        646,
        650,
        654,
        656,
        662,
        666,
        670,
        672,
        674,
        678,
        682,
        688,
        694,
        698,
        702,
        704,
        710,
        714,
        718,
        720,
        726,
        730,
        734,
        736,
        738,
        742,
        752,
        758,
        760,
        766,
        768,
        774,
        776,
        782,
        784,
        790,
        792,
        798,
        800,
        806,
        808,
        814,
        816,
        822,
        824,
        830,
        832,
        838,
        840,
        846,
        848,
        854,
        856,
        862,
        864,
        870,
        872,
        878,
        880,
        886,
        888,
        894,
        896,
        902,
        904,
        910,
        912,
        918,
        920,
        926,
        928,
        934,
        936,
        942,
        944,
        950,
        952,
        958,
        960,
        966,
        968,
        976,
        978,
        984,
        986,
        992,
        994,
        1000,
        1008,
        1014,
        1018,
        1022,
        1024,
        1030,
        1034,
        1038,
        1040,
        1046,
        1050,
        1054,
        1056,
        1062,
        1066,
        1072,
        1078,
        1082,
        1086,
        1088,
        1094,
        1098,
        1102,
        1104,
        1110,
        1114,
        1118,
        1120,
        1136,
        1142,
        1146,
        1150,
        1152,
        1158,
        1162,
        1166,
        1168,
        1174,
        1178,
        1182,
        1184,
        1186,
        1190,
        1194,
        1198,
        1200,
        1208,
        1210,
        1216,
        1224,
        1226,
        1232,
        1234,
        1248,
        1250,
        1256,
        1264,
        1266,
        1268,
        1270,
        1272,
        1274,
        1278,
        1280,
        1286,
        1290,
        1294,
        1296,
        1302,
        1306,
        1310,
        1312,
        1318,
        1322,
        1326,
        1328,
        1334,
        1338,
        1342,
        1344,
        1346,
        1352,
        1360,
        1366,
        1370,
        1376,
        1382,
        1386,
        1390,
        1392,
        1398,
        1402,
        1406,
        1408,
        1414,
        1418,
        1422,
        1424,
        1430,
        1434,
        1438,
        1440,
        1448,
        1456,
        1458,
        1460,
        1462,
        1464,
        1466,
        1470,
        1472,
        1478,
        1482,
        1486,
        1488,
        1494,
        1498,
        1502,
        1504,
        1510,
        1514,
        1518,
        1520,
        1526,
        1530,
        1536,
        1538,
        1542,
        1546,
        1550,
        1552,
        1558,
        1562,
        1566,
        1568,
        1574,
        1578,
        1582,
        1584,
        1588,
        1590,
        1598,
        1600,
        1606,
        1610,
        1614,
        1616,
        1622,
        1626,
        1630,
        1632,
        1638,
        1642,
        1646,
        1648,
        1654,
        1658,
        1662,
        1664,
        1666,
        1672,
        1674,
        1680,
        1682,
        1688,
        1696,
        1702,
        1706,
        1710,
        1712,
        1718,
        1722,
        1726,
        1728,
        1734,
        1738,
        1744,
        1746,
        1750,
        1754,
        1758,
        1760,
        1766,
        1770,
        1774,
        1776,
        1782,
        1786,
        1792,
        1794,
        1798,
        1802,
        1806,
        1808,
        1812,
        1814,
        1818,
        1822,
        1824,
        1830,
        1834,
        1838,
        1840,
        1842,
        1846,
        1850,
        1854,
        1856,
        1862,
        1866,
        1870,
        1872,
        1878,
        1882,
        1886,
        1888,
        1894,
        1896,
        1902,
        1904,
        1906,
        1910,
        1912,
        1914,
        1918,
        1920,
        1922,
        1926,
        1930,
        1934,
        1936,
        1944,
        1946,
        1950,
        1952,
        1960,
        1962,
        1966,
        1968,
        1984,
        1986,
        1992,
        1994,
        1998,
        2000,
        2006,
        2008,
        2010,
        2014,
        2016,
        2022,
        2024,
        2030,
        2032,
        2038,
        2040,
        2046,
        2048,
        2054,
        2056,
        2062,
        2064,
        2070,
        2072,
        2078,
        2080,
        2086,
        2092,
      ],
    },
    Object {
      "instrument": "C",
      "length": 2096,
      "notes": Array [
        16,
        76,
        80,
        132,
        144,
        272,
        336,
        368,
        392,
        400,
        428,
        432,
        460,
        464,
        496,
        520,
        528,
        556,
        560,
        592,
        608,
        624,
        628,
        632,
        636,
        640,
        644,
        648,
        652,
        656,
        660,
        664,
        668,
        672,
        676,
        680,
        684,
        688,
        692,
        696,
        700,
        704,
        708,
        712,
        716,
        720,
        724,
        728,
        732,
        736,
        740,
        752,
        880,
        944,
        976,
        1000,
        1008,
        1036,
        1040,
        1068,
        1072,
        1104,
        1136,
        1164,
        1168,
        1200,
        1216,
        1228,
        1232,
        1248,
        1264,
        1266,
        1268,
        1270,
        1272,
        1274,
        1280,
        1284,
        1288,
        1292,
        1296,
        1300,
        1304,
        1308,
        1312,
        1316,
        1320,
        1324,
        1328,
        1332,
        1344,
        1348,
        1352,
        1356,
        1360,
        1376,
        1380,
        1384,
        1388,
        1392,
        1396,
        1400,
        1404,
        1408,
        1412,
        1416,
        1420,
        1424,
        1428,
        1440,
        1444,
        1448,
        1452,
        1456,
        1458,
        1460,
        1462,
        1464,
        1466,
        1472,
        1500,
        1504,
        1532,
        1536,
        1586,
        1592,
        1600,
        1628,
        1632,
        1664,
        1680,
        1696,
        1700,
        1704,
        1708,
        1712,
        1716,
        1720,
        1724,
        1728,
        1732,
        1736,
        1740,
        1744,
        1748,
        1752,
        1756,
        1760,
        1764,
        1768,
        1772,
        1776,
        1780,
        1784,
        1788,
        1792,
        1796,
        1800,
        1804,
        1808,
        1810,
        1812,
        1814,
        1816,
        1818,
        1820,
        1822,
        1824,
        1828,
        1832,
        1836,
        1840,
        1844,
        1848,
        1852,
        1856,
        1860,
        1864,
        1868,
        1872,
        1878,
        1882,
        1888,
        1892,
        1896,
        1900,
        1904,
        1908,
        1912,
        1920,
        1924,
        1930,
        1934,
        1936,
        1940,
        1944,
        1948,
        1952,
        1956,
        1960,
        1964,
        1968,
        1984,
        1988,
        1992,
        1996,
        2000,
        2004,
        2008,
        2016,
        2080,
        2086,
        2092,
      ],
    },
    Object {
      "instrument": "F",
      "length": 2096,
      "notes": Array [
        1340,
        1436,
        1456,
        1458,
        1460,
        1462,
        1464,
        1466,
      ],
    },
    Object {
      "instrument": "H",
      "length": 2096,
      "notes": Array [
        146,
        148,
        150,
        152,
        154,
        156,
        160,
        162,
        164,
        166,
        168,
        170,
        172,
        176,
        178,
        180,
        182,
        184,
        186,
        188,
        192,
        194,
        196,
        198,
        200,
        202,
        204,
        208,
        210,
        212,
        214,
        216,
        218,
        220,
        224,
        226,
        228,
        230,
        232,
        234,
        236,
        240,
        242,
        244,
        246,
        248,
        250,
        252,
        256,
        258,
        260,
        262,
        264,
        266,
        268,
        274,
        276,
        278,
        280,
        282,
        284,
        288,
        290,
        292,
        294,
        296,
        298,
        300,
        304,
        306,
        308,
        310,
        312,
        314,
        316,
        320,
        322,
        324,
        326,
        328,
        330,
        332,
        338,
        340,
        342,
        344,
        346,
        348,
        352,
        354,
        356,
        358,
        360,
        362,
        372,
        376,
        380,
        384,
        388,
        596,
        600,
        604,
        612,
        616,
        754,
        756,
        758,
        760,
        762,
        764,
        768,
        770,
        772,
        774,
        776,
        778,
        780,
        784,
        786,
        788,
        790,
        792,
        794,
        796,
        800,
        802,
        804,
        806,
        808,
        810,
        812,
        816,
        818,
        820,
        822,
        824,
        826,
        828,
        832,
        834,
        836,
        838,
        840,
        842,
        844,
        848,
        850,
        852,
        854,
        856,
        858,
        860,
        864,
        866,
        868,
        870,
        872,
        878,
        882,
        884,
        886,
        888,
        890,
        892,
        896,
        898,
        900,
        902,
        904,
        906,
        908,
        912,
        914,
        916,
        918,
        920,
        922,
        924,
        928,
        930,
        932,
        934,
        936,
        938,
        940,
        946,
        948,
        950,
        952,
        954,
        956,
        960,
        962,
        964,
        966,
        968,
        970,
        972,
        980,
        984,
        988,
        992,
        996,
        1204,
        1208,
        1212,
        1220,
        1224,
        1236,
        1252,
        1256,
        1260,
        1366,
        1370,
        1654,
        1658,
        1662,
        1668,
        1672,
        1676,
        1684,
        1688,
        2018,
        2020,
        2022,
        2024,
        2026,
        2028,
        2030,
        2032,
        2034,
        2036,
        2038,
        2040,
        2042,
        2044,
        2046,
        2048,
        2050,
        2052,
        2054,
        2056,
        2058,
        2060,
        2062,
        2064,
        2066,
        2068,
        2070,
        2072,
      ],
    },
    Object {
      "instrument": "R",
      "length": 2096,
      "notes": Array [
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        84,
        88,
        92,
        96,
        100,
        104,
        108,
        112,
        116,
        120,
        124,
        128,
        404,
        408,
        412,
        416,
        420,
        424,
        436,
        440,
        444,
        448,
        452,
        456,
        468,
        472,
        476,
        480,
        484,
        488,
        492,
        500,
        504,
        508,
        512,
        516,
        526,
        532,
        536,
        540,
        544,
        548,
        552,
        564,
        568,
        572,
        576,
        580,
        1012,
        1016,
        1020,
        1024,
        1028,
        1032,
        1044,
        1048,
        1052,
        1056,
        1060,
        1064,
        1076,
        1080,
        1084,
        1088,
        1092,
        1096,
        1100,
        1108,
        1112,
        1116,
        1120,
        1140,
        1144,
        1148,
        1152,
        1156,
        1160,
        1172,
        1176,
        1180,
        1184,
        1188,
        1476,
        1480,
        1484,
        1488,
        1492,
        1496,
        1508,
        1512,
        1516,
        1520,
        1524,
        1528,
        1540,
        1544,
        1548,
        1552,
        1556,
        1560,
        1564,
        1568,
        1572,
        1576,
        1580,
        1584,
        1588,
        1590,
        1604,
        1608,
        1612,
        1616,
        1620,
        1624,
        1636,
        1640,
        1644,
        1648,
      ],
    },
    Object {
      "instrument": "S",
      "length": 2096,
      "notes": Array [
        14,
        20,
        28,
        36,
        44,
        52,
        60,
        68,
        76,
        84,
        92,
        100,
        108,
        116,
        124,
        132,
        140,
        142,
        143,
        148,
        154,
        164,
        170,
        180,
        186,
        196,
        202,
        212,
        218,
        228,
        234,
        244,
        250,
        260,
        266,
        268,
        276,
        282,
        292,
        298,
        308,
        314,
        324,
        330,
        340,
        346,
        356,
        362,
        364,
        372,
        380,
        388,
        394,
        395,
        396,
        398,
        399,
        404,
        412,
        420,
        428,
        436,
        444,
        452,
        460,
        462,
        463,
        468,
        476,
        484,
        492,
        500,
        508,
        516,
        522,
        523,
        524,
        532,
        540,
        548,
        556,
        564,
        572,
        580,
        584,
        588,
        596,
        604,
        612,
        618,
        619,
        620,
        621,
        622,
        623,
        628,
        636,
        644,
        652,
        660,
        668,
        676,
        684,
        686,
        687,
        692,
        700,
        708,
        716,
        724,
        732,
        740,
        748,
        750,
        751,
        756,
        762,
        772,
        778,
        788,
        794,
        804,
        810,
        820,
        826,
        836,
        842,
        852,
        858,
        868,
        874,
        876,
        884,
        890,
        900,
        906,
        916,
        922,
        932,
        938,
        940,
        948,
        954,
        964,
        970,
        972,
        974,
        975,
        980,
        988,
        996,
        1002,
        1003,
        1004,
        1006,
        1007,
        1012,
        1020,
        1028,
        1036,
        1044,
        1052,
        1060,
        1068,
        1070,
        1071,
        1076,
        1084,
        1092,
        1100,
        1108,
        1116,
        1122,
        1123,
        1124,
        1125,
        1130,
        1131,
        1132,
        1133,
        1140,
        1148,
        1156,
        1164,
        1172,
        1180,
        1188,
        1192,
        1196,
        1204,
        1212,
        1220,
        1228,
        1230,
        1231,
        1236,
        1238,
        1244,
        1245,
        1252,
        1260,
        1276,
        1284,
        1292,
        1300,
        1308,
        1316,
        1324,
        1332,
        1336,
        1348,
        1356,
        1362,
        1363,
        1364,
        1365,
        1368,
        1369,
        1372,
        1373,
        1380,
        1388,
        1396,
        1404,
        1412,
        1420,
        1428,
        1432,
        1444,
        1452,
        1468,
        1476,
        1484,
        1492,
        1500,
        1508,
        1516,
        1524,
        1532,
        1534,
        1535,
        1540,
        1548,
        1556,
        1564,
        1572,
        1580,
        1586,
        1592,
        1596,
        1604,
        1612,
        1620,
        1628,
        1636,
        1644,
        1650,
        1652,
        1656,
        1660,
        1668,
        1676,
        1684,
        1690,
        1691,
        1692,
        1693,
        1694,
        1695,
        1700,
        1708,
        1716,
        1724,
        1732,
        1740,
        1748,
        1756,
        1760,
        1762,
        1764,
        1772,
        1780,
        1788,
        1796,
        1804,
        1810,
        1816,
        1820,
        1828,
        1836,
        1844,
        1852,
        1860,
        1868,
        1874,
        1875,
        1876,
        1877,
        1880,
        1881,
        1884,
        1885,
        1892,
        1900,
        1908,
        1916,
        1924,
        1928,
        1929,
        1932,
        1933,
        1940,
        1948,
        1956,
        1964,
        1970,
        1971,
        1972,
        1973,
        1976,
        1977,
        1978,
        1979,
        1988,
        1996,
        2004,
        2012,
        2020,
        2026,
        2036,
        2042,
        2052,
        2058,
        2068,
        2074,
        2076,
      ],
    },
    Object {
      "instrument": "T",
      "length": 2096,
      "notes": Array [
        136,
        137,
        744,
        745,
        1242,
        1246,
        1247,
        1982,
        1983,
      ],
    },
    Object {
      "instrument": "t",
      "length": 2096,
      "notes": Array [
        138,
        139,
        746,
        747,
        1126,
        1127,
        1128,
        1134,
        1135,
        1240,
        1241,
        1374,
        1375,
        1594,
        1595,
        1974,
        1980,
        1981,
      ],
    },
  ],
}
`;

exports[`parses tabs with comments 1`] = `
Object {
  "instruments": Array [
    "B1",
    "C1",
    "CR",
    "Ch",
    "F1",
    "F2",
    "HH",
    "Hf",
    "Sn",
    "T1",
  ],
  "length": 1456,
  "tracks": Array [
    Object {
      "instrument": "B1",
      "length": 1456,
      "notes": Array [
        96,
        104,
        106,
        112,
        120,
        122,
        128,
        136,
        138,
        144,
        152,
        154,
        160,
        168,
        170,
        176,
        184,
        186,
        192,
        200,
        202,
        208,
        216,
        218,
        224,
        232,
        234,
        240,
        248,
        250,
        256,
        264,
        266,
        272,
        280,
        282,
        288,
        290,
        296,
        298,
        304,
        306,
        312,
        314,
        320,
        322,
        328,
        330,
        336,
        338,
        344,
        346,
        352,
        360,
        362,
        368,
        370,
        376,
        378,
        382,
        384,
        386,
        392,
        394,
        398,
        402,
        416,
        424,
        426,
        432,
        440,
        442,
        448,
        456,
        458,
        464,
        472,
        474,
        480,
        488,
        490,
        496,
        504,
        506,
        512,
        520,
        522,
        528,
        536,
        538,
        544,
        552,
        554,
        560,
        568,
        570,
        576,
        584,
        586,
        592,
        600,
        602,
        608,
        616,
        618,
        624,
        632,
        634,
        640,
        648,
        650,
        656,
        664,
        666,
        672,
        680,
        682,
        688,
        696,
        698,
        704,
        706,
        712,
        714,
        720,
        722,
        728,
        730,
        734,
        736,
        738,
        744,
        746,
        752,
        760,
        762,
        768,
        770,
        776,
        778,
        784,
        786,
        792,
        794,
        798,
        800,
        802,
        808,
        810,
        814,
        816,
        818,
        820,
        822,
        824,
        832,
        840,
        842,
        848,
        856,
        858,
        864,
        872,
        874,
        880,
        888,
        890,
        896,
        898,
        904,
        906,
        912,
        914,
        920,
        922,
        926,
        928,
        930,
        936,
        938,
        944,
        946,
        952,
        954,
        958,
        960,
        962,
        966,
        968,
        976,
        978,
        984,
        986,
        990,
        992,
        994,
        998,
        1000,
        1008,
        1010,
        1014,
        1016,
        1018,
        1022,
        1024,
        1026,
        1028,
        1030,
        1032,
        1098,
        1100,
        1102,
        1104,
        1106,
        1112,
        1114,
        1120,
        1122,
        1128,
        1130,
        1134,
        1136,
        1138,
        1144,
        1146,
        1152,
        1154,
        1160,
        1162,
        1166,
        1168,
        1170,
        1176,
        1178,
        1184,
        1186,
        1192,
        1194,
        1200,
        1202,
        1208,
        1210,
        1216,
        1218,
        1220,
        1222,
        1224,
        1226,
        1228,
        1230,
        1232,
        1234,
        1236,
        1238,
        1240,
        1242,
        1244,
        1246,
        1248,
        1250,
        1254,
        1256,
        1258,
        1262,
        1264,
        1266,
        1270,
        1272,
        1274,
        1278,
        1280,
        1282,
        1286,
        1288,
        1290,
        1294,
        1296,
        1298,
        1302,
        1304,
        1306,
        1310,
        1312,
        1314,
        1318,
        1320,
        1322,
        1326,
        1328,
        1330,
        1334,
        1336,
        1338,
        1342,
        1344,
        1346,
        1350,
        1352,
        1354,
        1358,
        1360,
        1362,
        1366,
        1368,
        1370,
        1374,
        1376,
        1378,
        1382,
        1384,
        1386,
        1390,
        1392,
        1394,
        1398,
        1400,
        1402,
        1406,
        1408,
        1410,
        1414,
        1416,
        1418,
        1422,
        1424,
        1426,
        1428,
        1430,
      ],
    },
    Object {
      "instrument": "C1",
      "length": 1456,
      "notes": Array [
        96,
        280,
        282,
        288,
        320,
        352,
        368,
        384,
        400,
        402,
        404,
        406,
        408,
        416,
        696,
        698,
        704,
        736,
        768,
        800,
        816,
        818,
        820,
        822,
        824,
        832,
        888,
        890,
        896,
        928,
        976,
        1008,
        1010,
        1012,
        1014,
        1016,
        1018,
        1020,
        1022,
        1104,
        1136,
        1168,
        1200,
        1248,
        1264,
        1280,
        1288,
        1296,
        1312,
        1328,
        1330,
        1344,
        1352,
        1360,
        1368,
        1376,
        1386,
        1388,
        1392,
        1400,
        1408,
        1416,
      ],
    },
    Object {
      "instrument": "CR",
      "length": 1456,
      "notes": Array [
        288,
        290,
        292,
        294,
        296,
        298,
        300,
        302,
        304,
        306,
        310,
        312,
        314,
        316,
        318,
        322,
        324,
        326,
        328,
        330,
        332,
        334,
        336,
        338,
        342,
        344,
        346,
        348,
        350,
        354,
        356,
        358,
        360,
        362,
        364,
        366,
        368,
        370,
        372,
        374,
        376,
        378,
        380,
        382,
        386,
        388,
        390,
        392,
        394,
        396,
        398,
        706,
        708,
        710,
        712,
        714,
        716,
        718,
        720,
        722,
        724,
        726,
        728,
        730,
        732,
        734,
        738,
        740,
        742,
        744,
        746,
        748,
        750,
        752,
        754,
        756,
        758,
        760,
        762,
        764,
        766,
        770,
        772,
        774,
        776,
        778,
        780,
        782,
        784,
        786,
        788,
        790,
        792,
        794,
        796,
        798,
        802,
        804,
        806,
        808,
        810,
        812,
        814,
        898,
        900,
        902,
        904,
        906,
        908,
        910,
        912,
        914,
        916,
        918,
        920,
        922,
        924,
        926,
        930,
        932,
        934,
        936,
        938,
        940,
        942,
        944,
        946,
        948,
        950,
        952,
        954,
        978,
        980,
        982,
        984,
        986,
        1024,
        1026,
        1028,
        1030,
        1032,
        1104,
        1106,
        1108,
        1110,
        1112,
        1114,
        1116,
        1118,
        1120,
        1122,
        1124,
        1126,
        1128,
        1130,
        1132,
        1134,
        1136,
        1138,
        1140,
        1142,
        1144,
        1146,
        1148,
        1150,
        1152,
        1154,
        1156,
        1158,
        1160,
        1162,
        1164,
        1166,
        1168,
        1170,
        1172,
        1174,
        1176,
        1178,
        1180,
        1182,
        1184,
        1186,
        1190,
        1192,
        1194,
        1196,
        1198,
        1200,
        1202,
        1204,
        1206,
        1208,
        1210,
        1212,
        1214,
        1250,
        1252,
        1254,
        1256,
        1258,
        1260,
        1262,
        1264,
        1266,
        1268,
        1270,
        1272,
        1274,
        1276,
        1278,
        1280,
        1282,
        1284,
        1286,
        1290,
        1292,
        1294,
        1298,
        1300,
        1302,
        1304,
        1306,
        1308,
        1310,
        1314,
        1316,
        1318,
        1320,
        1322,
        1324,
        1326,
        1334,
        1340,
        1342,
        1344,
        1346,
        1348,
        1350,
        1352,
        1354,
        1356,
        1358,
        1362,
        1364,
        1366,
        1370,
        1372,
        1374,
        1378,
        1380,
        1382,
        1388,
        1390,
        1394,
        1396,
        1398,
        1402,
        1404,
        1406,
        1410,
        1412,
        1414,
        1418,
        1420,
        1422,
      ],
    },
    Object {
      "instrument": "Ch",
      "length": 1456,
      "notes": Array [
        308,
        340,
        1006,
        1188,
        1330,
        1332,
        1336,
        1338,
        1340,
        1384,
      ],
    },
    Object {
      "instrument": "F1",
      "length": 1456,
      "notes": Array [
        960,
        962,
        966,
        968,
        992,
        994,
        998,
        1000,
        1098,
        1100,
        1102,
        1216,
        1218,
        1220,
        1222,
        1224,
        1226,
        1228,
        1230,
        1232,
        1234,
        1236,
        1238,
        1240,
        1242,
        1244,
        1246,
        1424,
        1426,
        1428,
        1430,
      ],
    },
    Object {
      "instrument": "F2",
      "length": 1456,
      "notes": Array [
        414,
        960,
        962,
        966,
        968,
        980,
        983,
        988,
        992,
        994,
        998,
        1000,
        1012,
        1020,
        1098,
        1100,
        1102,
      ],
    },
    Object {
      "instrument": "HH",
      "length": 1456,
      "notes": Array [
        98,
        100,
        102,
        104,
        106,
        108,
        110,
        112,
        114,
        116,
        118,
        120,
        122,
        124,
        126,
        128,
        130,
        132,
        134,
        136,
        138,
        140,
        142,
        144,
        146,
        148,
        150,
        152,
        154,
        156,
        158,
        160,
        162,
        164,
        166,
        168,
        170,
        172,
        174,
        176,
        178,
        180,
        182,
        184,
        186,
        188,
        190,
        192,
        194,
        196,
        198,
        200,
        202,
        204,
        206,
        208,
        210,
        212,
        214,
        216,
        218,
        220,
        222,
        224,
        226,
        228,
        230,
        232,
        234,
        236,
        238,
        240,
        242,
        244,
        246,
        248,
        250,
        252,
        254,
        256,
        258,
        260,
        262,
        264,
        266,
        268,
        270,
        272,
        274,
        276,
        418,
        420,
        422,
        424,
        426,
        428,
        430,
        432,
        434,
        436,
        438,
        440,
        442,
        444,
        446,
        448,
        450,
        452,
        454,
        456,
        458,
        460,
        462,
        464,
        466,
        468,
        470,
        472,
        474,
        476,
        478,
        480,
        482,
        484,
        486,
        488,
        490,
        492,
        494,
        496,
        498,
        500,
        502,
        504,
        506,
        508,
        510,
        512,
        514,
        516,
        518,
        520,
        522,
        524,
        526,
        528,
        530,
        532,
        534,
        536,
        538,
        540,
        542,
        544,
        546,
        548,
        550,
        552,
        554,
        556,
        558,
        560,
        562,
        564,
        566,
        568,
        570,
        572,
        574,
        576,
        578,
        580,
        582,
        584,
        586,
        588,
        590,
        592,
        594,
        596,
        598,
        600,
        602,
        604,
        606,
        608,
        610,
        612,
        614,
        616,
        618,
        620,
        622,
        624,
        626,
        628,
        630,
        632,
        634,
        636,
        638,
        640,
        642,
        644,
        646,
        648,
        650,
        652,
        654,
        656,
        658,
        660,
        662,
        664,
        666,
        668,
        670,
        672,
        674,
        676,
        678,
        680,
        682,
        684,
        686,
        688,
        690,
        692,
        834,
        836,
        838,
        840,
        842,
        844,
        846,
        848,
        850,
        852,
        854,
        856,
        858,
        860,
        862,
        864,
        866,
        868,
        870,
        872,
        874,
        876,
        878,
        880,
        882,
        884,
      ],
    },
    Object {
      "instrument": "Hf",
      "length": 1456,
      "notes": Array [
        958,
      ],
    },
    Object {
      "instrument": "Sn",
      "length": 1456,
      "notes": Array [
        100,
        108,
        116,
        124,
        132,
        140,
        148,
        156,
        164,
        172,
        180,
        188,
        196,
        204,
        212,
        220,
        228,
        236,
        244,
        252,
        260,
        268,
        276,
        284,
        285,
        286,
        287,
        292,
        300,
        308,
        316,
        324,
        332,
        340,
        343,
        348,
        356,
        364,
        372,
        375,
        380,
        388,
        396,
        400,
        402,
        404,
        406,
        408,
        411,
        412,
        420,
        428,
        436,
        444,
        452,
        460,
        468,
        476,
        484,
        492,
        500,
        508,
        516,
        524,
        532,
        540,
        548,
        556,
        564,
        572,
        580,
        588,
        596,
        604,
        612,
        620,
        628,
        636,
        644,
        652,
        660,
        668,
        676,
        684,
        692,
        700,
        701,
        702,
        703,
        708,
        716,
        724,
        732,
        740,
        743,
        748,
        756,
        764,
        772,
        780,
        788,
        791,
        796,
        804,
        812,
        816,
        818,
        820,
        822,
        824,
        836,
        844,
        852,
        860,
        868,
        876,
        884,
        892,
        893,
        894,
        895,
        900,
        908,
        916,
        924,
        932,
        940,
        943,
        948,
        956,
        1006,
        1024,
        1026,
        1028,
        1030,
        1108,
        1116,
        1124,
        1127,
        1132,
        1140,
        1148,
        1156,
        1159,
        1164,
        1172,
        1180,
        1188,
        1191,
        1196,
        1204,
        1212,
        1216,
        1218,
        1220,
        1222,
        1224,
        1226,
        1228,
        1230,
        1232,
        1234,
        1236,
        1238,
        1240,
        1242,
        1244,
        1246,
        1252,
        1260,
        1268,
        1276,
        1284,
        1292,
        1300,
        1308,
        1316,
        1324,
        1332,
        1340,
        1348,
        1356,
        1364,
        1372,
        1380,
        1388,
        1396,
        1404,
        1412,
        1420,
        1424,
        1426,
        1428,
        1430,
      ],
    },
    Object {
      "instrument": "T1",
      "length": 1456,
      "notes": Array [
        413,
      ],
    },
  ],
}
`;
